--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,23 @@ django-cors-headers = "^4.4.0"
 django-filter = "^24.3"
 django-split-settings = "^1.3.2"
 pyyaml = "^6.0.2"
+types-pyyaml = "^6.0.12.20240808"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.8.0"
+types-pyyaml = "^6.0.12.20240808"
+
+[tool.isort]
+multi_line_output = 5
+line_length = 119
+
+[tool.yapf]
+based_on_style = "google"
+align_closing_bracket_with_visual_indent = true
+coalesce_brackets = true
+column_limit = 119
+dedent_closing_brackets = true
 
 [build-system]
 requires = ["poetry-core"]
