--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ types-pyyaml = "^6.0.12.20240808"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
 types-pyyaml = "^6.0.12.20240808"
+colorlog = "^6.8.2"
 
 [tool.isort]
 multi_line_output = 5
