--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-filter = "^24.3"
 django-split-settings = "^1.3.2"
 pyyaml = "^6.0.2"
 types-pyyaml = "^6.0.12.20240808"
+django-channels = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
