--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ django-split-settings = "^1.3.2"
 pyyaml = "^6.0.2"
 types-pyyaml = "^6.0.12.20240808"
 django-channels = "^0.7.0"
+pymongo = "^4.8.0"
+dnspython = "^2.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
